// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Should display list when the list is defined after fetch. 1`] = `
<div>
  <div></div>
</div>
`;

exports[`List Should display not found message when list does not exist after fetch. 1`] = `
<div>
  <div>La liste n'a pas été trouvée</div>
</div>
`;

exports[`List Should render. 1`] = `
<div>
  <div>list name</div>
</div>
`;
